@@ -1,10 +1,15 @@
 package roomescape.service;
 
+import java.time.LocalDate;
+import java.time.LocalTime;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
+import roomescape.dto.ReservationAllResponse;
+import roomescape.dto.ReservationPatchRequest;
 import roomescape.dto.ReservationRequest;
 import roomescape.dto.ReservationResponse;
+import roomescape.exception.ErrorCode;
+import roomescape.exception.RoomescapeException;
 import roomescape.model.Reservation;
 import roomescape.model.ReservationTime;
 import roomescape.model.Theme;
@@ -26,30 +31,33 @@ public class ReservationService {
         this.themeRepository = themeRepository;
     }
 
-    public List<ReservationResponse> read() {
+    public ReservationAllResponse read() {
         List<Reservation> reservations = reservationRepository.findAll();
-        return reservations.stream()
+        List<ReservationResponse> responses = reservations.stream()
                 .map(ReservationResponse::from)
-                .collect(Collectors.toList());
+                .toList();
+        return new ReservationAllResponse(responses);
     }
 
     public void removeById(Long id) {
         int deleteCnt = reservationRepository.deleteById(id);
-        if(deleteCnt == 0) {
-            throw new IllegalArgumentException("존재하지 않는 예약의 ID 입니다.");
+        if (deleteCnt == 0) {
+            throw new RoomescapeException(ErrorCode.RESERVATION_NOT_FOUND);
         }
     }
 
     public ReservationResponse register(ReservationRequest reservationRequest) {
+        reservationRequestValidate(reservationRequest);
         ReservationTime time = timeRepository.findById(reservationRequest.timeId())
-                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 시간입니다."));
+                .orElseThrow(() -> new RoomescapeException(ErrorCode.RESERVATION_TIMEID_NOT_FOUND));
+        reservationRequestDayCheck(reservationRequest.date(), time);
         Theme theme = themeRepository.findById(reservationRequest.themeId())
-                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 테마입니다."));
+                .orElseThrow(() -> new RoomescapeException(ErrorCode.RESERVATION_THEMEID_NOT_FOUND));
 
         if (reservationRepository.existsByDateAndTimeIdAndThemeId(reservationRequest.date(),
                 reservationRequest.timeId(),
                 reservationRequest.themeId())) {
-            throw new IllegalArgumentException("이미 존재하는 예약입니다.");
+            throw new RoomescapeException(ErrorCode.RESERVATION_DUPLICATE);
         }
 
         Reservation reservation = new Reservation(null, reservationRequest.name(), reservationRequest.date(),
@@ -58,4 +66,54 @@ public class ReservationService {
         return ReservationResponse.from(saved);
     }
 
+    private void reservationRequestDayCheck(LocalDate date, ReservationTime time) {
+        if (date.isBefore(LocalDate.now())) {
+            throw new RoomescapeException(ErrorCode.RESERVATION_WRONG_DATE);
+        }
+        if (date.isEqual(LocalDate.now())) {
+            if (time.startAt().getHour() <= LocalTime.now().getHour()) {
+                throw new RoomescapeException(ErrorCode.RESERVATION_WRONG_TIME);
+            }
+        }
+    }
+
+    private void reservationRequestValidate(ReservationRequest reservationRequest) {
+        if (reservationRequest.name() == null) {
+            throw new RoomescapeException(ErrorCode.RESERVATION_BLANK_NAME);
+        }
+        if (reservationRequest.date() == null) {
+            throw new RoomescapeException(ErrorCode.RESERVATION_BLANK_DATE);
+        }
+        if (reservationRequest.themeId() == null) {
+            throw new RoomescapeException(ErrorCode.RESERVATION_BLANK_THEMEID);
+        }
+        if (reservationRequest.timeId() == null) {
+            throw new RoomescapeException(ErrorCode.RESERVATION_BLANK_TIMEID);
+        }
+    }
+
+    public ReservationAllResponse readByName(String name) {
+        List<Reservation> reservations = reservationRepository.findByName(name);
+        List<ReservationResponse> responses = reservations.stream()
+                .map(ReservationResponse::from)
+                .toList();
+        return new ReservationAllResponse(responses);
+    }
+
+    public ReservationResponse patchById(Long id, ReservationPatchRequest reservationPatchRequest) {
+        Reservation reservation = reservationRepository.findById(id);
+        ReservationTime time = timeRepository.findById(reservationPatchRequest.timeId())
+                .orElseThrow(() -> new RoomescapeException(ErrorCode.RESERVATION_TIMEID_NOT_FOUND));
+        reservationRequestDayCheck(reservation.date(), reservation.time());
+        reservationRequestDayCheck(reservationPatchRequest.date(), time);
+
+        Theme theme = reservation.theme();
+        if (reservationRepository.existsByDateAndTimeIdAndThemeId(reservationPatchRequest.date(),
+                reservationPatchRequest.timeId(), theme.getId())) {
+            throw new RoomescapeException(ErrorCode.RESERVATION_DUPLICATE);
+        }
+
+        return ReservationResponse.from(
+                reservationRepository.update(reservationPatchRequest.date(), reservationPatchRequest.timeId(), id));
+    }
 }
