@@ -1,10 +1,12 @@
 package roomescape.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
+import roomescape.dto.TimeAllResponse;
 import roomescape.dto.TimeRequest;
 import roomescape.dto.TimeResponse;
+import roomescape.exception.ErrorCode;
+import roomescape.exception.RoomescapeException;
 import roomescape.model.ReservationTime;
 import roomescape.repository.ReservationRepository;
 import roomescape.repository.TimeRepository;
@@ -20,35 +22,39 @@ public class TimeService {
         this.reservationRepository = reservationRepository;
     }
 
-    public List<TimeResponse> readAll() {
+    public TimeAllResponse readAll() {
         List<ReservationTime> times = timeRepository.findAll();
-        return times.stream()
+        List<TimeResponse> responses = times.stream()
                 .map(TimeResponse::from)
-                .collect(Collectors.toList());
+                .toList();
+        return new TimeAllResponse(responses);
     }
 
-    public List<TimeResponse> readAllByThemeIdAndDate(Long themeId, String date) {
+    public TimeAllResponse readAllByThemeIdAndDate(Long themeId, String date) {
         List<ReservationTime> times = timeRepository.findAllByThemeIdAndDate(themeId, date);
-        return times.stream()
+        List<TimeResponse> responses = times.stream()
                 .map(TimeResponse::from)
-                .collect(Collectors.toList());
+                .toList();
+        return new TimeAllResponse(responses);
     }
 
     public void removeById(Long id) {
         if (reservationRepository.existsByTimeId(id)) {
-            throw new IllegalArgumentException("해당 시간에 예약이 존재하여 삭제할 수 없습니다.");
+            throw new RoomescapeException(ErrorCode.TIME_CANNOT_DELETE);
         }
         int deleteCnt = timeRepository.deleteById(id);
         if (deleteCnt == 0) {
-            throw new IllegalArgumentException("존재하지 않는 시간의 ID 입니다.");
+            throw new RoomescapeException(ErrorCode.TIME_NOT_FOUND);
         }
     }
 
     public TimeResponse register(TimeRequest timeRequest) {
-        if (timeRepository.existsByStartAt(timeRequest.startAt())) {
-            throw new IllegalArgumentException("이미 존재하는 시간입니다.");
+        if (timeRequest.startAt() == null) {
+            throw new RoomescapeException(ErrorCode.TIME_BLANK_STARTAT);
         }
-
+        if (timeRepository.existsByStartAt(timeRequest.startAt())) {
+            throw new RoomescapeException(ErrorCode.TIME_DUPLICATE);
+        }
         ReservationTime reservationTime = timeRepository.save(timeRequest.startAt());
         return TimeResponse.from(reservationTime);
     }
